# JAVIS

./: .env.example  .gitignore  IMPLEMENTATION_RULES.md  README.md  RECOVERY_PLAN.md  docker-compose.yml  run_jarvis.bat  start-jarvis-full.ps1
docs/: regression-smoke-prompts-focused-fix.md  windows-native-tauri-runbook.md
jarvis-backend/: Dockerfile  requirements.txt  run_jarvis.bat
jarvis-backend/app/: brain.py  config.py  main.py  tts_engine.py
jarvis-backend/app/actuators/: __init__.py  document_tools.py  notification_tools.py  registry.py  risk_gate.py  spotify_tools.py  system_tools.py  web_tools.py  windows_tools.py
jarvis-backend/app/brain/: __init__.py  cloud_client.py  exceptions.py  heuristic_router.py  memory.py  memory_guardian.py  models.py  ollama_client.py  orchestrator.py  personal_profile.py  plan_executor.py  streamer.py  (+2 more)
jarvis-backend/data/: user_profile.json
jarvis-backend/scripts/: start-backend-clean.ps1
jarvis-backend/tests/: test_spoken_display_policy.py
jarvis-frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
jarvis-frontend/src/: App.tsx  PowerController.tsx  index.css
jarvis-frontend/src-tauri/: Cargo.toml  tauri.conf.json
jarvis-frontend/src-tauri/capabilities/: default.json
jarvis-frontend/src-tauri/icons/: icon.icns
jarvis-frontend/src-tauri/src/: main.rs
scripts/: host-optimizer-listener.ps1  host-tts-dml-worker.ps1  host_tts_dml_worker.py  smoke-test-native.ps1  smoke_api_cloud.py  start-backend-clean.ps1  start-jarvis-with-priorities.ps1  start-tts-native.ps1
(+4 files in other folders)
