[package]
name = "jarvis"
version = "0.1.0"
description = "Jarvis desktop shell"
authors = ["Jarvis Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0" }

[features]
custom-protocol = ["tauri/custom-protocol"]
